; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/storage/sync/extr_sync.c_EnableSyncRequestForwarding.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/storage/sync/extr_sync.c_EnableSyncRequestForwarding.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@pendingOps = common dso_local global i32* null, align 8
@pendingUnlinks = common dso_local global i64 0, align 8
@NIL = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @EnableSyncRequestForwarding() #0 {
  %1 = load i32*, i32** @pendingOps, align 8
  %2 = icmp ne i32* %1, null
  br i1 %2, label %3, label %7

3:                                                ; preds = %0
  %4 = call i32 (...) @ProcessSyncRequests()
  %5 = load i32*, i32** @pendingOps, align 8
  %6 = call i32 @hash_destroy(i32* %5)
  br label %7

7:                                                ; preds = %3, %0
  store i32* null, i32** @pendingOps, align 8
  %8 = load i64, i64* @pendingUnlinks, align 8
  %9 = load i64, i64* @NIL, align 8
  %10 = icmp eq i64 %8, %9
  %11 = zext i1 %10 to i32
  %12 = call i32 @Assert(i32 %11)
  ret void
}

declare dso_local i32 @ProcessSyncRequests(...) #1

declare dso_local i32 @hash_destroy(i32*) #1

declare dso_local i32 @Assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
